Added a ChangeLog, edited DESCRIPTION and NAMESPACE
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@32 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/DESCRIPTION
+++ b/pkg/rtfSweave/DESCRIPTION
@@ -15,6 +15,6 @@ Description: This package provides an Sweave driver that allows
  collaborate primarily with
  Word users but would otherwise prefer to use Sweave with LaTeX. 
 License: GPL (>= 2)
-Imports: utils
+Imports: utils, grDevices
 BuildVignettes: no
 NeedsCompilation: no
