Changed BuildVignettes to 'yes'
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@47 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/DESCRIPTION
+++ b/pkg/rtfSweave/DESCRIPTION
@@ -17,5 +17,5 @@ Description: This package provides an Sweave driver that allows
  Word users but would otherwise prefer to use Sweave with LaTeX. 
 License: GPL (>= 2)
 Imports: utils, grDevices
-BuildVignettes: no
+BuildVignettes: yes
 NeedsCompilation: no
