Tweaks to handle adding 'rander_rtf'
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@85 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/NAMESPACE
+++ b/pkg/rtfSweave/NAMESPACE
@@ -1,2 +1,2 @@
-export(RweaveRtf, SweaveSyntaxRtf, RtangleRtf)
+export(RweaveRtf, SweaveSyntaxRtf, RtangleRtf, render_rtf)
 import(utils, grDevices)
