--- a/pkg/rtfSweave/DESCRIPTION
+++ b/pkg/rtfSweave/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: rtfSweave
 Type: Package
 Title: An Sweave Driver to Process Files with R Code and RTF Text
-Version: 0.4-0
-Date: 2016-12-09 
+Version: 0.5-0
+Date: 2016-12-23 
 Authors@R: c(person(given = "R Core Team", role = c("aut", "cph")),
              person(given = "Stephen", family = "Weigand", role = c("aut", "cre"),
                     email = "Weigand.Stephen@mayo.edu"))
@@ -17,5 +17,6 @@ Description: An Sweave driver that allows
  Word users but would otherwise prefer to use Sweave with LaTeX. 
 License: GPL (>= 2)
 Imports: utils, grDevices
+Suggests: knitr
 BuildVignettes: yes
 NeedsCompilation: no
