Exporting 'rtf.options' and 'rtf.getOption'
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@90 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/NAMESPACE
+++ b/pkg/rtfSweave/NAMESPACE
@@ -1,2 +1,3 @@
-export(RweaveRtf, SweaveSyntaxRtf, RtangleRtf, render_rtf)
+export(RweaveRtf, SweaveSyntaxRtf, RtangleRtf, render_rtf,
+       rtf.options, rtf.getOption)
 import(utils, grDevices)
