Moved knitr-related and options-related code out of the rtfSweave package
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@103 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/DESCRIPTION
+++ b/pkg/rtfSweave/DESCRIPTION
@@ -15,6 +15,6 @@ Description: An Sweave driver that allows the user to use Sweave to create
  with LaTeX. 
 License: GPL (>= 2)
 Imports: utils, grDevices
-Suggests: knitr
+Suggests:
 BuildVignettes: yes
 NeedsCompilation: no
