Removed knitr and optiosn related imports from NAMESPACE
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@104 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/NAMESPACE
+++ b/pkg/rtfSweave/NAMESPACE
@@ -1,3 +1,4 @@
-export(RweaveRtf, SweaveSyntaxRtf, RtangleRtf, render_rtf,
-       rtf.options, rtf.getOption)
+export(RweaveRtf,
+       SweaveSyntaxRtf,
+       RtangleRtf)
 import(utils, grDevices)
