Updated the DESCRIPTION file
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@117 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/DESCRIPTION
+++ b/pkg/rtfSweave/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: rtfSweave
 Type: Package
 Title: An Sweave Driver to Process Files with R Code and RTF Text
-Version: 0.6-0
-Date: 2020-11-29 
+Version: 0.7-0
+Date: 2022-02-27
 Authors@R: c(person(given = "R Core Team", role = c("aut", "cph")),
              person(given = "Stephen", family = "Weigand", role = c("aut", "cre"),
                     email = "Weigand.Stephen@mayo.edu"))
@@ -10,9 +10,9 @@ Maintainer: Stephen Weigand <Weigand.Stephen@mayo.edu>
 Description: An Sweave driver that allows the user to use Sweave to create
  documents having R code chunks and Rich Text Format (RTF) documentation chunks. 
  After Sweave()ing the file, the output is an RTF document that can be opened in
- word processors like Microsoft Word. This approach may be useful for people who 
- collaborate primarily with Word users but would otherwise prefer to use Sweave
- with LaTeX. 
+ Microsoft Word or another word processor. This approach may be useful for those
+ who want a lot of control over the document format and do not mind writing
+ RTF markup.
 License: GPL (>= 2)
 Imports: utils, grDevices
 Suggests:
