Check for ASCII, reformat options in code, document all options in Rd
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@121 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/DESCRIPTION
+++ b/pkg/rtfSweave/DESCRIPTION
@@ -14,7 +14,7 @@ Description: An Sweave driver that allows the user to use Sweave to create
  who want a lot of control over the document format and do not mind writing
  RTF markup.
 License: GPL (>= 2)
-Imports: utils, grDevices
+Imports: tools, utils, grDevices
 Suggests:
 BuildVignettes: yes
 NeedsCompilation: no
