Maybe a working package with compiled code?
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@131 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/testdotC/DESCRIPTION
+++ b/pkg/testdotC/DESCRIPTION
@@ -9,4 +9,4 @@ Maintainer: Stephen Weigand <Weigand.Stephen@mayo.edu>
 Description: This package is an attempt to learn and document
  for myself the .C interface function.
 License: GPL (>= 2)
-NeedsCompilation: no
+NeedsCompilation: yes
