Added compiled code for check_brackets but problems with examples on x64
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@138 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/NAMESPACE
+++ b/pkg/rtfSweave/NAMESPACE
@@ -1,4 +1,6 @@
 export(RweaveRtf,
        SweaveSyntaxRtf,
-       RtangleRtf)
+       RtangleRtf,
+       check_brackets)
+useDynLib(rtfSweave, check_rtf_brackets)
 import(tools, utils, grDevices)
