--- a/pkg/rtfSweave/DESCRIPTION
+++ b/pkg/rtfSweave/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: rtfSweave
 Type: Package
 Title: An Sweave Driver to Process Files with R Code and RTF Text
-Version: 0.7-2
-Date: 2022-03-11
+Version: 0.7-3
+Date: 2022-04-11
 Authors@R: c(person(given = "R Core Team", role = c("aut", "cph")),
              person(given = "Stephen", family = "Weigand", role = c("aut", "cre"),
                     email = "Weigand.Stephen@mayo.edu"))
@@ -18,4 +18,4 @@ License: GPL (>= 2)
 Imports: tools, utils, grDevices
 Suggests:
 BuildVignettes: yes
-NeedsCompilation: no
+NeedsCompilation: yes
