Added quickstart function and bumped version to 0.7.5
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@142 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/NAMESPACE
+++ b/pkg/rtfSweave/NAMESPACE
@@ -1,6 +1,7 @@
 export(RweaveRtf,
        SweaveSyntaxRtf,
        RtangleRtf,
-       check_brackets)
+       check_brackets,
+       quickstart)
 useDynLib(rtfSweave, check_rtf_brackets)
 import(tools, utils, grDevices)
